* Version 0.01 - initial release
* Version 0.02:
	- add dictionary directories selection in settings dialog
	- redesign menus
	- add Oxygen icons
	- add "Save translation" action
	- add pop up window opacity item to settings dialog
	- rename actions
	- add .desktop file
* Version 0.03:
	- fix bug when build fails on x86_64
	- fix categories in .desktop file
	- add option "Show pop up only if modifier pressed" in settings dialog
	- improve selection scanning
	- fix bug with closing window when it must hide
	- setting Qt 4.2 compitibility
	- add russian translation
	- add traditional chinese translation
* Version 0.04
	- add ukrainian translation
	- fix bug when popup window violates from desktop
	- add translations reformater
	- add popup window timeout before hide after mouse over to settings dialog
	- fix bug with "Up" buttons in settings dialog
	- add popup window default width and height items to settings dialog
	- change PopupWindow base class from QWidget to QFrame
	- add D-Bus support
	- make popup window resizable
	- add current translation title to main window header
* Version 0.05
	- fix bug with hard font-family in translation CSS
	- make popup window border more useful
	- fix bug with words list
	- add simplified chinese translation
	- fix bug with uncorrect displayed hierarchical lists
	- set to run only one instance of application
	- set to search for dictionaries recursively
* Version 0.06
	- add bulgarian translation
	- add speech support
	- fix bug with broken main window title when search is empty
* Version 0.07
	- add "translate" and "translateHtml" methods to D-Bus interface
	- change license from GPLv3 to GPLv2
* Version 0.08
	- add czech translation
	- fix bug with multiple running from different users