@@ -7,4 +7,5 @@ Thanks to:
     Truth whoes add a simplified chinese translation
     Nikola Valentinov Petrov whoes add a bulgarian translation
     Jiri Hlinka whoes add a czech translation
-
+    Klaos Lacerda and Bruno Gonçalves whoes add a brazilian portuguese 
+translation
