@@ -1,0 +1,325 @@
+<?xml version="1.0" encoding="utf-8"?>
+<!DOCTYPE TS><TS version="1.1" language="pt_BR">
+<defaultcodec></defaultcodec>
+<context>
+    <name>DictCore</name>
+    <message>
+        <location filename="" line="0"/>
+        <source>Not found!</source>
+        <translation>Não Encontrado!</translation>
+    </message>
+</context>
+<context>
+    <name>MainWindow</name>
+    <message>
+        <location filename="" line="0"/>
+        <source>QStarDict</source>
+        <translation type="unfinished"></translation>
+    </message>
+    <message>
+        <location filename="" line="0"/>
+        <source>About QStarDict</source>
+        <translation type="unfinished">Sobre QStarDict</translation>
+    </message>
+    <message>
+        <location filename="" line="0"/>
+        <source>&lt;b&gt;QStarDict </source>
+        <translation type="unfinished"></translation>
+    </message>
+    <message>
+        <location filename="" line="0"/>
+        <source>&lt;/b&gt; - Qt version of StarDict&lt;br&gt;</source>
+        <translation type="unfinished">&lt;/b&gt; - Versão do QT  StarDict &lt;br&gt;</translation>
+    </message>
+    <message>
+        <location filename="" line="0"/>
+        <source>Copyright (C) 2007 Alexander Rodin &lt;a href=&quot;http://qstardict.ylsoftware.com&quot;&gt;http://qstardict.ylsoftware.com&lt;/a&gt;</source>
+        <translation type="unfinished"></translation>
+    </message>
+    <message>
+        <location filename="" line="0"/>
+        <source>Save translation</source>
+        <translation type="unfinished">Salvar tradução</translation>
+    </message>
+    <message>
+        <location filename="" line="0"/>
+        <source>Error</source>
+        <translation type="unfinished">Erro</translation>
+    </message>
+    <message>
+        <location filename="" line="0"/>
+        <source>Cannot save translation</source>
+        <translation type="unfinished">Não é possivel salvar tradução</translation>
+    </message>
+    <message>
+        <location filename="" line="0"/>
+        <source>Clear the search box</source>
+        <translation type="unfinished">Limpar caixa de Busca</translation>
+    </message>
+    <message>
+        <location filename="" line="0"/>
+        <source>Clear</source>
+        <translation type="unfinished">Limpar</translation>
+    </message>
+    <message>
+        <location filename="" line="0"/>
+        <source>Fuzzy query</source>
+        <translation type="unfinished">Fuzzy Consulta</translation>
+    </message>
+    <message>
+        <location filename="" line="0"/>
+        <source>Search</source>
+        <translation type="unfinished">Buscar</translation>
+    </message>
+    <message>
+        <location filename="" line="0"/>
+        <source>Words list</source>
+        <translation type="unfinished">Lista de Palavras</translation>
+    </message>
+    <message>
+        <location filename="" line="0"/>
+        <source>&amp;Settings</source>
+        <translation type="unfinished">&amp;Configurações</translation>
+    </message>
+    <message>
+        <location filename="" line="0"/>
+        <source>&amp;File</source>
+        <translation type="unfinished">&amp;Arquivo</translation>
+    </message>
+    <message>
+        <location filename="" line="0"/>
+        <source>&amp;Quit</source>
+        <translation type="unfinished">&amp;Sair</translation>
+    </message>
+    <message>
+        <location filename="" line="0"/>
+        <source>Ctrl+Q</source>
+        <translation type="unfinished">Ctrl+Q</translation>
+    </message>
+    <message>
+        <location filename="" line="0"/>
+        <source>&amp;About</source>
+        <translation type="unfinished">&amp;Sobre</translation>
+    </message>
+    <message>
+        <location filename="" line="0"/>
+        <source>About &amp;Qt</source>
+        <translation type="unfinished">Sobre Qt</translation>
+    </message>
+    <message>
+        <location filename="" line="0"/>
+        <source>&amp;Configure QStarDict</source>
+        <translation type="unfinished">&amp;Configurar QStarDict</translation>
+    </message>
+    <message>
+        <location filename="" line="0"/>
+        <source>&amp;Scan</source>
+        <translation type="unfinished">&amp;Busca</translation>
+    </message>
+    <message>
+        <location filename="" line="0"/>
+        <source>&amp;Save to file</source>
+        <translation type="unfinished">&amp;Salvar para arquivo</translation>
+    </message>
+    <message>
+        <location filename="" line="0"/>
+        <source>Ctrl+S</source>
+        <translation type="unfinished">Ctrl+s</translation>
+    </message>
+    <message>
+        <location filename="" line="0"/>
+        <source>&amp;Help</source>
+        <translation type="unfinished">&amp;Ajuda</translation>
+    </message>
+    <message>
+        <location filename="" line="0"/>
+        <source>%1 - QStarDict</source>
+        <translation type="unfinished"></translation>
+    </message>
+</context>
+<context>
+    <name>SettingsDialog</name>
+    <message>
+        <location filename="" line="0"/>
+        <source>Select dictionaries directory</source>
+        <translation type="unfinished">Selecionar Diretório de Dicionários</translation>
+    </message>
+    <message>
+        <location filename="" line="0"/>
+        <source>Dictionaries</source>
+        <translation type="unfinished">Dicionários</translation>
+    </message>
+    <message>
+        <location filename="" line="0"/>
+        <source>Order</source>
+        <translation type="unfinished">Ordem</translation>
+    </message>
+    <message>
+        <location filename="" line="0"/>
+        <source>Disabled dictionaries:</source>
+        <translation type="unfinished">Desabilitar Dicionários:</translation>
+    </message>
+    <message>
+        <location filename="" line="0"/>
+        <source>Left</source>
+        <translation type="unfinished">Esquerda</translation>
+    </message>
+    <message>
+        <location filename="" line="0"/>
+        <source>Down</source>
+        <translation type="unfinished">Baixo</translation>
+    </message>
+    <message>
+        <location filename="" line="0"/>
+        <source>Up</source>
+        <translation type="unfinished">Cima</translation>
+    </message>
+    <message>
+        <location filename="" line="0"/>
+        <source>Right</source>
+        <translation type="unfinished">Direita</translation>
+    </message>
+    <message>
+        <location filename="" line="0"/>
+        <source>Ordered dictionaries:</source>
+        <translation type="unfinished">Ordem dos Dicionários:</translation>
+    </message>
+    <message>
+        <location filename="" line="0"/>
+        <source>Directories</source>
+        <translation type="unfinished">Diretórios</translation>
+    </message>
+    <message>
+        <location filename="" line="0"/>
+        <source>Add</source>
+        <translation type="unfinished">Adicionar</translation>
+    </message>
+    <message>
+        <location filename="" line="0"/>
+        <source>Remove</source>
+        <translation type="unfinished">Remover</translation>
+    </message>
+    <message>
+        <location filename="" line="0"/>
+        <source>Popup window</source>
+        <translation type="unfinished">Janela Popup</translation>
+    </message>
+    <message>
+        <location filename="" line="0"/>
+        <source>Scan selection</source>
+        <translation type="unfinished">Buscar Seleção</translation>
+    </message>
+    <message>
+        <location filename="" line="0"/>
+        <source>Show only if modifier pressed</source>
+        <translation type="unfinished">Mostrar somente com modificador pressionando</translation>
+    </message>
+    <message>
+        <location filename="" line="0"/>
+        <source>Alt</source>
+        <translation type="unfinished">Alt</translation>
+    </message>
+    <message>
+        <location filename="" line="0"/>
+        <source>Control</source>
+        <translation type="unfinished">Control</translation>
+    </message>
+    <message>
+        <location filename="" line="0"/>
+        <source>Shift</source>
+        <translation type="unfinished">Shift</translation>
+    </message>
+    <message>
+        <location filename="" line="0"/>
+        <source>Win</source>
+        <translation type="unfinished">Win</translation>
+    </message>
+    <message>
+        <location filename="" line="0"/>
+        <source>%</source>
+        <translation type="unfinished">%</translation>
+    </message>
+    <message>
+        <location filename="" line="0"/>
+        <source>Show if word not found</source>
+        <translation type="unfinished">Mostrar as palavras não encontradas</translation>
+    </message>
+    <message>
+        <location filename="" line="0"/>
+        <source>QStarDict Settings</source>
+        <translation type="unfinished">Configurações QStarDict</translation>
+    </message>
+    <message>
+        <location filename="" line="0"/>
+        <source>Apperance</source>
+        <translation type="unfinished">Aparencia</translation>
+    </message>
+    <message>
+        <location filename="" line="0"/>
+        <source>Opacity</source>
+        <translation type="unfinished"><byte value="x9"/>
+Opacidade</translation>
+    </message>
+    <message>
+        <location filename="" line="0"/>
+        <source>Default width</source>
+        <translation type="unfinished"><byte value="x9"/>
+Largura padrão</translation>
+    </message>
+    <message>
+        <location filename="" line="0"/>
+        <source>Default height</source>
+        <translation type="unfinished">Altura Padrão</translation>
+    </message>
+    <message>
+        <location filename="" line="0"/>
+        <source>Behavior</source>
+        <translation type="unfinished">Comportamento</translation>
+    </message>
+    <message>
+        <location filename="" line="0"/>
+        <source>Timeout before hide after mouse over</source>
+        <translation type="unfinished">Esperar antes esconder depois de passar o mouse sobre</translation>
+    </message>
+    <message>
+        <location filename="" line="0"/>
+        <source> sec</source>
+        <translation type="unfinished">seg</translation>
+    </message>
+    <message>
+        <location filename="" line="0"/>
+        <source>Translation view</source>
+        <translation type="unfinished">Mostrar tradução</translation>
+    </message>
+    <message>
+        <location filename="" line="0"/>
+        <source>Expand abbreviations</source>
+        <translation type="unfinished">Expandir abreviaturas</translation>
+    </message>
+    <message>
+        <location filename="" line="0"/>
+        <source>Reformat translations</source>
+        <translation type="unfinished">Reformatar traduções</translation>
+    </message>
+    <message>
+        <location filename="" line="0"/>
+        <source>&lt;b&gt;&lt;font color=&quot;red&quot;&gt;Warning!&lt;/font&gt;&lt;/b&gt; Reformated translations may be not correct displayed</source>
+        <translation type="unfinished">&lt;b&gt;&lt;font color=&quot;red&quot;&gt;Увага!&lt;/font&gt;&lt;/b&gt; Traduções reformatadas não podem ser exibida corretamente</translation>
+    </message>
+    <message>
+        <location filename="" line="0"/>
+        <source>Don&apos;t hide</source>
+        <translation type="unfinished">Não Esconder</translation>
+    </message>
+    <message>
+        <location filename="" line="0"/>
+        <source>Pronounce the word</source>
+        <translation type="unfinished">Pronúciar esta palavra</translation>
+    </message>
+    <message>
+        <location filename="" line="0"/>
+        <source>Pronounce using this command:</source>
+        <translation type="unfinished">Pronúciar usando o comando:</translation>
+    </message>
+</context>
+</TS>
